# Pothole-Identifier

./: CMakeLists.txt  README.md  build_windows.bat  heatmap.cpp  main.cpp  pothole_severity.cpp  pothole_severity.hpp
